# esp-thread-border-router

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
main/: CMakeLists.txt  README.md  idf_component.yml
main/assets/frontend/: index.html
main/assets/frontend/static/: restful.js  style.css
main/core/: esp_ot_br.c
main/web/: esp_br_web.c  esp_br_web_api.c  esp_br_web_api.h
